<resources>

    <string name="app_name">mySchedule</string>
    <string name="click_and_create">Click here and Create a task!</string>
    <string name="schedule">Schedule</string>
    <string name="record">Record</string>
    <string name="help">Help</string>
    <string name="setting">Setting</string>
    <string name="once">One Task</string>
    <string name="twice">Two Task</string>
    <string name="plan_do">Plan Do</string>
    <string name="start_stop">Start-Stop</string>
    <string name="guide">The guide of APP</string>
    <string name="list_button">the list button</string>
    <string name="add_button">add button</string>
    <string name="iu">很重要很紧急</string>
    <string name="inu">很重要不紧急</string>
    <string name="niu">不重要很紧急</string>
    <string name="ninu">不重要不紧急</string>
    <string name="sound_record">sound recording</string>
    <string name="input_hint">输入待办事项</string>
    <string name="calendar_emind">日历和提醒的图片</string>
    <string name="repeat">重复设置</string>
    <string name="project">新建项目</string>
    <string name="project_title">项目</string>
    <string name="label">标签设置</string>
    <string name="location">地点设置</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="note">备注</string>
    <string name="subtask">子任务</string>
    <string name="importance">重要度和紧急度</string>
    <string name="starttime">开始时间</string>
    <string name="endtime">结束时间</string>
    <string name="no_remind">不提醒</string>
    <string name="timely_remind">准时提醒</string>
    <string name="head_of_5min">提前5分钟提醒</string>
    <string name="head_of_15min">提前15分钟提醒</string>
    <string name="head_of_30min">提前30分钟提醒</string>
    <string name="head_of_1hour">提前一小时提醒</string>
    <string name="no_repeat">不重复</string>
    <string name="dayly_repeat">每天重复</string>
    <string name="weekly_repeat">每周重复</string>
    <string name="month_repeat">每月重复</string>
    <string name="year_repeat">每年重复</string>
    <string name="setprogram">设置项目</string>
    <string name="setlabel">设置标签</string>
    <string name="add_new_program">新建项目</string>
    <string name="input_program">输入项目名称</string>
    <string name="input_label">输入标签名称</string>
    <string name="label_attention">从列表选择或输入标签</string>
    <string name="location_set">设置地点</string>
    <string name="default_location">输入或选择地址</string>
    <string name="clean_location">清除地点设置</string>
    <string name="add_new_label">添加</string>
    <string name="settings">设置</string>
    <string name="input_task">输入新任务</string>
    <string name="step1">"1.开始-暂停-保存"</string>
    <string name="step2">"2.下方列表中有保存过的数据"</string>
    <string name="step3">"3.保存数据后才可输入新的任务"</string>
    <string name="task">任务</string>
    <string name="time">花费时间</string>
    <string name="clearall">一键清除</string>
    <string name="isprotected">是否开启密码保护</string>
    <string name="input_newpd">新密码</string>
    <string name="makesure_pd">确认密码</string>
    <string name="input_oldpd">当前密码</string>
    <string name="label_title">标签</string>

</resources>