<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step1"/>
    <TextView
        android:id="@+id/step2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step2" />

    <TextView
        android:id="@+id/step3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/step3" />

    <EditText
        android:id="@+id/input_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_task" />

</LinearLayout>