<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/repeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/no_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_repeat"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/dayly_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dayly_repeat"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/weekly_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weekly_repeat"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/month_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/month_repeat"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/year_repeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/year_repeat"
            android:textSize="18sp" />
    </RadioGroup>
    <Button android:id="@+id/repeate_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"/>
</LinearLayout>