<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/setlabel"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/label_attention"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_attention"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/input_label"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_label"
            android:textSize="20sp" />

        <Button
            android:id="@+id/add_new_label"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_label" />
    </LinearLayout>

    <ListView
        android:id="@+id/labels"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >
    </ListView>
    
    <Button
        android:id="@+id/label_complete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        />

</LinearLayout>