<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@drawable/datebackground"
        android:gravity="center" >
    </TextView>

    <Button
        android:id="@+id/click"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/click_and_create"
        android:textSize="24sp" />

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:format="%s"
        android:textSize="80sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/task"
            android:textSize="18sp" />

        <TextView
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time"
            android:textSize="18sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/timers"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

    <Button
        android:id="@+id/clearall"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearall"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/record"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/record" />

        <Button
            android:id="@+id/schedule"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/schedule" />

        <Button
            android:id="@+id/help"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/help" />

        <Button
            android:id="@+id/setting"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0.25"
            android:gravity="center"
            android:text="@string/setting" />
    </LinearLayout>

</LinearLayout>