<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Switch
        android:id="@+id/switch1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/isprotected"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/oldpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/input_oldpd" />

        <EditText
            android:id="@+id/mEdit1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/newpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/input_newpd" />

        <EditText
            android:id="@+id/mEdit2"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/surepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/makesure_pd" />

        <EditText
            android:id="@+id/mEdit3"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword" />
    </LinearLayout>

</LinearLayout>