<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!-- 页面最上边的一项 -->

        <LinearLayout
            android:id="@+id/menu"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/menu_background"
            android:orientation="horizontal" >

            <!-- 列表按钮 -->

            <ImageButton
                android:id="@+id/navigation"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/list_button"
                android:contentDescription="@string/list_button" />
            <!-- 显示一天、月日、星期几 -->

            <LinearLayout
                android:id="@+id/today"
                android:layout_width="0dip"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/today_show"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/date_show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/week_show"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <!-- 添加日程按钮 -->

            <ImageButton
                android:id="@+id/add_item"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/add_button"
                android:contentDescription="@string/add_button" />
        </LinearLayout>
        <!-- 下面整体的一块 -->

        <LinearLayout
            android:id="@+id/items"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="100"
            android:orientation="vertical" >

            <!-- 重要模块 -->

            <LinearLayout
                android:id="@+id/important"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <!-- 重要紧急模块 -->

                <LinearLayout
                    android:id="@+id/important_urgent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/iu"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/iu_tittle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/iu" />

                    <ListView
                        android:id="@+id/iu_list"
                        android:layout_width="wrap_content"
                        android:layout_height="0dip"
                        android:layout_weight="1" >
                    </ListView>
                </LinearLayout>

                <!-- 重要不紧急模块 -->

                <LinearLayout
                    android:id="@+id/important_not_urgent"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/inu"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/inu_tittle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/inu" />

                    <ListView
                        android:id="@+id/inu_list"
                        android:layout_width="wrap_content"
                        android:layout_height="0dip"
                        android:layout_weight="1" >
                    </ListView>
                </LinearLayout>
            </LinearLayout>
            <!-- 不重要模块 -->

            <LinearLayout
                android:id="@+id/not_important"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <!-- 不重要很紧急模块 -->

                <LinearLayout
                    android:id="@+id/not_important_but_urgent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/niu"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/niu_tittle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/niu" />

                    <ListView
                        android:id="@+id/niu_list"
                        android:layout_width="wrap_content"
                        android:layout_height="0dip"
                        android:layout_weight="1" >
                    </ListView>
                </LinearLayout>
                <!-- 不重要不紧急模块 -->

                <LinearLayout
                    android:id="@+id/not_important_not_urgent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/ninu"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/ninu_tittle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ninu" />

                    <ListView
                        android:id="@+id/ninu_list"
                        android:layout_width="wrap_content"
                        android:layout_height="0dip"
                        android:layout_weight="1" >
                    </ListView>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/navigation_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" >
    </ListView>

</android.support.v4.widget.DrawerLayout>